--- a/views/loggedin.html
+++ b/views/loggedin.html
@@ -59,7 +59,7 @@ background-position: center center;">
 <div class="footer">
     <div ng-include="'/views/footer.html'"></div>
     <div class="container">
-        <div class="language-select text-center" ng-controller="LanguageselectCtrl" ng-if="temMultilingua">
+        <div class="language-select text-center" ng-controller="LanguageselectCtrl" ng-if="grupo.temMultilingua">
 
             <ul class="list-inline" style="margin-bottom: 0;">
                 <li><span class="glyphicon glyphicon-globe" aria-hidden="true"></span></li>
@@ -70,26 +70,6 @@ background-position: center center;">
                     </small>
                 </li>
             </ul>
-        </div>
-        <br>
-    </div>
-
-    <div class="bg-gray">
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-sm-3">
-                    <br>
-                    <img src="../images/logo-corteva.8905455d.svg" class="img-responsive" alt="">
-                </div>
-                <div class="col-xs-12 col-sm-6"></div>
-                <div class="col-xs-12 col-sm-3">
-                    <br>
-                    <small>Visite-nos em <a href="http://corteva.com.br" target="_blank">corteva.com.br </a> <br>®, ™
-                        Marcas registradas da DuPont, Dow AgroSciences e Pioneer e empresas aﬁliadas ou de seus
-                        respectivos proprietários.</small>
-                </div>
-            </div>
-
         </div>
         <br>
     </div>
